[gd_scene load_steps=5 format=3 uid="uid://c4ui8j2t8glw0"]

[ext_resource type="Script" uid="uid://ca4g8ipel5xlq" path="res://Components/Turret/turret.gd" id="1_p3y8b"]
[ext_resource type="PackedScene" uid="uid://do3q1y3fmiwh" path="res://Art/Models/turretHubModelParts.tscn" id="2_eg07v"]

[sub_resource type="BoxMesh" id="BoxMesh_aqewf"]
size = Vector3(0.5, 0.15, 0.15)

[sub_resource type="BoxShape3D" id="BoxShape3D_q7jdv"]

[node name="Turret" type="Node3D"]
script = ExtResource("1_p3y8b")

[node name="TurretHub" parent="." instance=ExtResource("2_eg07v")]
transform = Transform3D(0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0.25, 0)

[node name="Bearing" type="MeshInstance3D" parent="TurretHub"]
unique_name_in_owner = true
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, -0.733179)
layers = 2
mesh = SubResource("BoxMesh_aqewf")
skeleton = NodePath("../..")

[node name="AimLaser" type="RayCast3D" parent="TurretHub/Bearing"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.299885)
target_position = Vector3(0, 0, -3)

[node name="AimCalculateLocation" type="Marker3D" parent="TurretHub/Bearing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.953983)

[node name="ShapeCast3D" type="ShapeCast3D" parent="TurretHub/Bearing"]
shape = SubResource("BoxShape3D_q7jdv")
target_position = Vector3(0, 0, -5)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
